[gd_scene load_steps=5 format=2]

[ext_resource path="res://accesorios/sprites/enemy_a_b/car_1_4.png" type="Texture" id=1]
[ext_resource path="res://accesorios/scenes/car_enemy/car_npc.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="car_npc" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.23, 0.2 )
texture = ExtResource( 1 )

[node name="detect_hit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_hit"]
scale = Vector2( 2.2, 4.2 )
shape = SubResource( 2 )

[node name="front_raycast" type="RayCast2D" parent="."]
position = Vector2( 0, -42 )
rotation = 3.14159
enabled = true

[node name="right_raycast" type="RayCast2D" parent="."]
position = Vector2( 23, 0 )
rotation = 4.71239
enabled = true

[node name="left_raycast" type="RayCast2D" parent="."]
position = Vector2( -23, 0 )
rotation = 1.5708
enabled = true

[node name="Timer" type="Timer" parent="."]

[node name="back_raycast" type="RayCast2D" parent="."]
position = Vector2( 0, 42.5 )
enabled = true

[connection signal="body_entered" from="detect_hit" to="." method="_on_detect_hit_body_entered"]
